# Cage_prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
configs/: s3_motion.yaml  s4_hybrid.yaml  s4_hybrid_step2.yaml  s4_hybrid_step4.yaml  s4_hybrid_step6.yaml  s4_hybrid_step8.yaml  s4_lstm_mooring.yaml  s4_lstm_mooring_wave_known_force1.yaml  s4_lstm_mooring_wave_known_force2.yaml  s4_regression.yaml  s5_attention.yaml  s5_attention_force2_h20.yaml  s5_attention_force2_h30.yaml
data/: README.md
results/: README.md  复现报告_第3章.md  复现报告_第4章.md  复现报告_第5章.md  论文复现报告_完整版.md
s3/: 3.3.ipynb  3.3.py  3.4.py  MinMaxScaler_data.csv  gui单_heave_步长1.csv  gui单_pitch_步长1.csv  gui单_surge_步长1.csv  gui多_heave_步长1.csv  gui多_pitch_步长1.csv  gui多_surge_步长1.csv  gui训练1000_heave_步长1.csv  gui训练1000_pitch_步长1.csv  gui训练1000_surge_步长1.csv  gui训练100_heave_步长1.csv  gui训练100_pitch_步长1.csv  gui训练100_surge_步长1.csv  gui训练10_heave_步长1.csv  gui训练10_pitch_步长1.csv  gui训练10_surge_步长1.csv  gui训练200_heave_步长1.csv  gui训练200_pitch_步长1.csv  gui训练200_surge_步长1.csv  gui训练20_heave_步长1.csv  gui训练20_pitch_步长1.csv  gui训练20_surge_步长1.csv  gui训练300_heave_步长1.csv  gui训练300_pitch_步长1.csv  gui训练300_surge_步长1.csv  gui训练30_heave_步长1.csv  gui训练30_pitch_步长1.csv  gui训练30_surge_步长1.csv  gui训练400_heave_步长1.csv  gui训练400_pitch_步长1.csv  gui训练400_surge_步长1.csv  gui训练40_heave_步长1.csv  gui训练40_pitch_步长1.csv  gui训练40_surge_步长1.csv  gui训练500_heave_步长1.csv  gui训练500_pitch_步长1.csv  gui训练500_surge_步长1.csv  (+120 more)
s5/: force1500_步长10_LSTM.csv  force1500_步长20_LSTM.csv  force1500_步长30_LSTM.csv  force150_步长1.csv  (+17 more)
(+440 files in other folders)
