[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cage-predict"
version = "0.1.0"
description = "Deep learning based floating offshore aquaculture cage dynamic response prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8,<3.12"
authors = [
    {name = "Murong0731"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.19",
    "pandas>=1.2",
    "matplotlib>=3.3",
    "scikit-learn>=0.24",
    "scipy>=1.5",
    "pyyaml>=5.4",
    "tensorflow>=2.4,<2.16; python_version<'3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "xgboost>=1.5",
]
torch = [
    "torch>=2.0",
]
all = [
    "pytest>=7.0",
    "xgboost>=1.5",
    "torch>=2.0",
]

[project.scripts]
cage-predict = "cage_predict.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
